--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -11,9 +11,23 @@ header {
   border-bottom: 1px solid #ececec;
 }
 .container {
-  width: 1230px;
-  margin: 0 auto;
-  padding: 0 15px;
+  // width: 1230px;
+  // width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 1px solid blue;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1230px) {
+    width: 1230px;
+  }
 }
 .link {
   text-decoration: none;
@@ -45,7 +59,9 @@ header .link.current {
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 li {
   margin-top: 0;
@@ -58,7 +74,10 @@ li {
   letter-spacing: 0.03em;
   color: $secondary-color;
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 1230px) {
+    margin-bottom: 50px;
+  }
 }
 p {
   margin: 0;
