--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -11,7 +11,7 @@
   list-style: none;
   display: flex;
   justify-content: center;
-  margin-bottom: 24px;
+  // margin-bottom: 24px;
   padding: 0;
 }
 .social-item:not(:last-child) {
@@ -60,5 +60,7 @@
 }
 
 .join-icons {
-  margin-left: 69px;
+  @media screen and (min-width: 1230px) {
+    margin-left: 69px;
+  }
 }
