--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -7,7 +7,11 @@
   align-items: center;
 }
 .navigation .list {
-  margin-left: 85px;
+  margin-left: 84px;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 .nav-item {
   position: relative;
@@ -22,13 +26,25 @@
   margin-right: 40px;
 }
 .contacts {
-  margin-left: auto;
+  margin-left: 71px;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 1230px) {
+    margin-left: auto;
+    .link-info + .link-info {
+      margin-left: 30px;
+    }
+  }
 }
+
+// text-align: left;
+
 .link-info {
   color: $main-color;
   display: inline-block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link-info + .link-info {
-  margin-left: 30px;
-}
+// .link-info + .link-info {
+//   margin-left: 30px;
+// }
