--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -9,10 +9,24 @@
   overflow: hidden;
 }
 .filter {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1230px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .list {
-    justify-content: center;
+    // justify-content: flex-start;
+    display: flex;
+    flex-wrap: wrap;
+    margin: -4px;
+    margin-bottom: 40px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 30px;
+      justify-content: center;
+    }
   }
 }
 .filter-button {
@@ -33,29 +47,54 @@
     color: #ffffff;
   }
 }
-.filter-item:not(:last-child) {
-  margin-right: 8px;
+// .filter-item:not(:last-child) {
+//   margin-right: 8px;
+// }
+.filter-item {
+  margin: 4px;
+
+  @media screen and (min-width: 768px) {
+    margin: 0;
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
 }
 .portfolio-list {
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    margin: -15px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  // display: flex;
+  // flex-wrap: wrap;
 }
 .portfolio-item {
-  width: calc((100% - 60px) / 3);
+  // width: calc((100% - 60px) / 3);
   border: 1px solid #eeeeee;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:nth-child(-n + 3) {
-    margin-top: 50px;
-  }
-  &:not(:nth-child(3n)) {
-    margin-right: 30px;
-  }
-  &:not(:nth-last-child(-n + 3)) {
+  &:not(:last-child) {
     margin-bottom: 30px;
   }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+  @media screen and (min-width: 1230px) {
+    width: calc((100% - 6 * 15px) / 3);
+  }
+  // &:nth-child(-n + 3) {
+  //   margin-top: 50px;
+  // }
+  // &:not(:nth-child(3n)) {
+  //   margin-right: 30px;
+  // }
+  // &:not(:nth-last-child(-n + 3)) {
+  //   margin-bottom: 30px;
+  // }
   &:hover {
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
       0px 1px 1px rgba(0, 0, 0, 0.12);
@@ -68,6 +107,7 @@
 .portfolio-image {
   display: block;
   width: 100%;
+  height: auto;
 }
 .image-box {
   position: relative;
@@ -80,12 +120,22 @@
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
     color: #ffffff;
-    padding: 63px 24px;
+    // padding: 63px 24px;
+    padding: 49px 24px;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-size: 18px;
     line-height: 1.55;
     letter-spacing: 0.03em;
+    @media screen and (min-width: 480px) {
+      padding: 77px 24px;
+    }
+    @media screen and (min-width: 768px) {
+      padding: 49px 24px;
+    }
+    @media screen and (min-width: 1230px) {
+      padding: 63px 24px;
+    }
   }
 }
 
