--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,24 +1,50 @@
 .team {
   background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1230px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .list {
-    justify-content: space-evenly;
+    @media screen and (min-width: 768px) and (max-width: 1229px) {
+      margin: -15px;
+      flex-wrap: wrap;
+    }
+    @media screen and (min-width: 1230px) {
+      justify-content: space-evenly;
+    }
   }
 }
 .team-item {
-  width: calc((100% - 90px) / 4);
   background-color: #fff;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
-  &:not(:last-child) {
-    margin-right: 0;
+  padding-bottom: 24px;
+  @media screen and (min-width: 768px) {
+    margin: 15px;
+    width: calc((100% - 4 * 15px) / 2);
   }
+  @media screen and (min-width: 768px) {
+    margin: 15px;
+    width: calc((100% - 4 * 15px) / 2);
+  }
+  @media screen and (min-width: 1230px) {
+    margin: 0;
+    width: calc((100% - 90px) / 4);
+  }
+  // &:not(:last-child) {
+  //   margin-right: 0;
+  // }
+  // &:not(:last-child) {
+  //   margin-bottom: 60px;
+  // }
 }
 .team-image {
   display: block;
   width: 100%;
+  height: auto;
 }
 .team-title {
   font-weight: 500;
