--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,7 +8,7 @@
 
   @media screen and (max-width: 767px) {
     display: block;
-    padding-left: 15px;
+    // padding-left: 15px;
     padding-top: 16px;
     padding-bottom: 16px;
   }
