--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -3,8 +3,14 @@
   align-items: center;
 }
 .navigation {
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+
+  @media screen and (min-width: 768px) {
+    width: auto;
+  }
 }
 .navigation .list {
   margin-left: 84px;
@@ -18,7 +24,8 @@
   .link {
     display: block;
     padding-top: 32px;
-    padding-bottom: 32px;
+    padding-bottom: 8px;
+    // padding-bottom: 8px;
   }
 }
 
@@ -38,13 +45,84 @@
   }
 }
 
-// text-align: left;
-
 .link-info {
   color: $main-color;
   display: inline-block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-// .link-info + .link-info {
-//   margin-left: 30px;
+/* Мобильное меню */
+.menu-button {
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+.menu-button .icon-cross {
+  display: none;
+}
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+// .menu-button.is-open .icon-menu {
+//   display: none;
 // }
+
+.menu-button:hover .icon-menu,
+.menu-button:hover .icon-cross {
+  fill: $accent-color;
+}
+.menu-container {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  display: none;
+  background-color: #ffffff;
+  padding: 20px;
+  color: #ffffff;
+  height: 350px;
+  text-align: center;
+  z-index: 2;
+  &.is-open {
+    display: block;
+  }
+}
+
+.menu-container .list {
+  display: block;
+  margin-left: 0;
+  display: inline-flex;
+  flex-direction: column;
+
+  .nav-item {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.nav-item .link {
+  @media screen and (min-width: 768px) {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+.menu-container .contacts {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+  width: 190px;
+
+  .link-info:first-child {
+    margin-bottom: 16px;
+  }
+}
