--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,6 @@ header {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 1px solid blue;
 }
 
 @media screen and (min-width: 480px) {
@@ -436,6 +435,13 @@ p {
   padding-top: 118px;
 }
 
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/Hero-mobile-2x.jpg);
+    background-size: contain;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .hero {
     width: 480px;
@@ -450,13 +456,27 @@ p {
   }
 }
 
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/Hero-tablet-2x.jpg);
+    background-size: contain;
+  }
+}
+
 @media screen and (min-width: 1230px) {
   .hero {
     width: 1600px;
     height: 600px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/Hero-opt.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-opt.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/Hero-desktop.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-desktop.jpg);
     padding-top: 200px;
+  }
+}
+
+@media screen and (min-width: 1230px) and (min-device-pixel-ratio: 2), screen and (min-width: 1230px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1230px) and (min-resolution: 192dpi), screen and (min-width: 1230px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/Hero-desktop-2x.jpg);
+    background-size: contain;
   }
 }
 
