--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,9 +9,16 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/Hero-mobile.jpg);
-
   height: 400px;
   padding-top: 118px;
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (-webkit-min-device-pixel-ratio: 2),
+    screen and (-o-min-device-pixel-ratio: 2/1),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url(../images/Hero-mobile-2x.jpg);
+    background-size: contain;
+  }
 
   @media screen and (min-width: 480px) {
     width: 480px;
@@ -24,6 +31,14 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/Hero-tablet.jpg);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/Hero-tablet-2x.jpg);
+      background-size: contain;
+    }
   }
   @media screen and (min-width: 1230px) {
     width: 1600px;
@@ -33,10 +48,19 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/Hero-opt.jpg);
+      url(../images/Hero-desktop.jpg);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/Hero-desktop-2x.jpg);
+      background-size: contain;
+    }
     padding-top: 200px;
   }
 }
+
 .hero-title {
   color: #ffffff;
   font-weight: 900;
